--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,8 @@
 
   <body>
     <header class="header">Header</header>
+    <footer class="footer">
+      Footer
+    </footer>
   </body>
 </html>
