--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,7 @@
 
   <body>
     <header class="header">Header</header>
-    <footer class="footer">
-      Footer
-    </footer>
+    <main class="content"></main>
+    <footer class="footer">Footer</footer>
   </body>
 </html>
